--- a/public/index.html
+++ b/public/index.html
@@ -157,18 +157,15 @@
             <a href="https://www.wordreference.com/es/en/translation.asp?spen=huevo" target="_blank" rel="noopener noreferrer">nm</a>
           </td>
           <td>
-            <a href="https://www.spanishdict.com/translate/huevo" target="_blank" rel="noopener noreferrer">eggs</a>
+            <a href="https://www.spanishdict.com/translate/huevo" target="_blank" rel="noopener noreferrer">egg</a>
           </td>
         </tr>
       </tbody>
     </table>
     <h2>
-       Test
+       Emotions
       <hr />
     </h2>
-    <h3>
-       Title
-    </h3>
     <table>
       <thead style="visibility: collapse;">
         <tr>
@@ -186,13 +183,67 @@
       <tbody>
         <tr>
           <td>
-            <a href="https://www.linguee.com/english-spanish/search?source=auto&query=test" target="_blank" rel="noopener noreferrer">test</a>
+            <a href="https://www.linguee.com/english-spanish/search?source=auto&query=amor" target="_blank" rel="noopener noreferrer">amor</a>
           </td>
           <td>
-            <a href="https://www.wordreference.com/es/en/translation.asp?spen=test" target="_blank" rel="noopener noreferrer">test</a>
+            <a href="https://www.wordreference.com/es/en/translation.asp?spen=amor" target="_blank" rel="noopener noreferrer">nm</a>
           </td>
           <td>
-            <a href="https://www.spanishdict.com/translate/test" target="_blank" rel="noopener noreferrer">test</a>
+            <a href="https://www.spanishdict.com/translate/amor" target="_blank" rel="noopener noreferrer">love</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a href="https://www.linguee.com/english-spanish/search?source=auto&query=miedo" target="_blank" rel="noopener noreferrer">miedo</a>
+          </td>
+          <td>
+            <a href="https://www.wordreference.com/es/en/translation.asp?spen=miedo" target="_blank" rel="noopener noreferrer">nm</a>
+          </td>
+          <td>
+            <a href="https://www.spanishdict.com/translate/miedo" target="_blank" rel="noopener noreferrer">fear</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a href="https://www.linguee.com/english-spanish/search?source=auto&query=temor" target="_blank" rel="noopener noreferrer">temor</a>
+          </td>
+          <td>
+            <a href="https://www.wordreference.com/es/en/translation.asp?spen=temor" target="_blank" rel="noopener noreferrer">nm</a>
+          </td>
+          <td>
+            <a href="https://www.spanishdict.com/translate/temor" target="_blank" rel="noopener noreferrer">fear</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <h2>
+       Comparisons
+      <hr />
+    </h2>
+    <table>
+      <thead style="visibility: collapse;">
+        <tr>
+          <th class="palabra">
+            Palabra
+          </th>
+          <th class="part">
+            Part of Speech
+          </th>
+          <th class="definitions">
+            Definitions
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <a href="https://www.linguee.com/english-spanish/search?source=auto&query=preferible" target="_blank" rel="noopener noreferrer">preferible</a>
+          </td>
+          <td>
+            <a href="https://www.wordreference.com/es/en/translation.asp?spen=preferible" target="_blank" rel="noopener noreferrer">adj</a>
+          </td>
+          <td>
+            <a href="https://www.spanishdict.com/translate/preferible" target="_blank" rel="noopener noreferrer">preferable</a>
           </td>
         </tr>
       </tbody>
